--- a/app/src/main/res/layout/wallet_activity_send.xml
+++ b/app/src/main/res/layout/wallet_activity_send.xml
@@ -19,94 +19,132 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_name"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/wallet_white"
+        android:layout_marginTop="@dimen/dp_16"
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16"
+        android:background="@mipmap/wallet_shadow_bg"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title">
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="5dp"
-            tools:text="ETH"
-            android:textColor="@color/wallet_black"
-            android:textSize="15sp"
+            android:layout_marginLeft="@dimen/dp_7"
+            android:layout_marginTop="@dimen/dp_5"
+            android:text="@string/wallet_transfer_amount"
+            android:textColor="@color/wallet_text_black"
+            android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/edit_hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/dp_16"
+            android:paddingBottom="@dimen/dp_16"
+            android:text="@string/wallet_input_amount"
+            android:textColor="@color/wallet_color_A2A2A2"
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="@id/name"
+            app:layout_constraintTop_toBottomOf="@id/name" />
+
+        <EditText
+            android:id="@+id/input_amount"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginRight="7dp"
+            android:background="@null"
+            android:inputType="number|numberDecimal"
+            android:paddingLeft="18dp"
+            android:textColor="@color/wallet_text_black"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@id/edit_hint"
+            app:layout_constraintLeft_toRightOf="@id/edit_hint"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/edit_hint" />
+
+        <View
+            android:id="@+id/line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginRight="7dp"
+            android:background="@color/wallet_line_gray"
+            app:layout_constraintLeft_toLeftOf="@id/edit_hint"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/input_amount" />
+
+        <TextView
+            android:id="@+id/token_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/wallet_text_black"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@id/name"
+            app:layout_constraintTop_toBottomOf="@id/line"
+            tools:text="ETH" />
 
         <TextView
             android:id="@+id/balance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="12dp"
-            tools:text="余额: 1ETH"
-            android:textColor="@color/wallet_main_blue_color"
+            android:layout_marginRight="7dp"
+            android:textColor="@color/wallet_color_A2A2A2"
             android:textSize="15sp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/name" />
+            app:layout_constraintTop_toTopOf="@id/token_name"
+            app:layout_constraintBottom_toBottomOf="@id/token_name"
+            tools:text="余额: 1ETH" />
 
-        <EditText
-            android:id="@+id/input_amount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:inputType="number|numberDecimal"
-            android:background="@null"
-            android:hint="@string/wallet_input_amount"
-            android:textSize="16sp"
-            android:paddingTop="15dp"
-            android:paddingBottom="10dp"
-            android:layout_marginBottom="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/balance" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <View
-        android:id="@+id/line1"
-        android:layout_width="match_parent"
-        android:layout_height="12dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/cl_name" />
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/wallet_white"
-        app:layout_constraintTop_toBottomOf="@id/line1">
+        android:layout_marginTop="@dimen/dp_16"
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16"
+        app:layout_constraintTop_toBottomOf="@id/cl_name"
+        android:background="@mipmap/wallet_shadow_bg">
 
         <TextView
             android:id="@+id/address_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
+            android:layout_marginLeft="7dp"
             android:layout_marginTop="5dp"
             android:text="@string/wallet_receive_address"
-            android:textColor="@color/wallet_black"
-            android:textSize="15sp"
+            android:textColor="@color/wallet_text_black"
+            android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/input_address"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginBottom="12dp"
             android:background="@null"
             android:hint="@string/wallet_input_address"
-            android:paddingTop="15dp"
-            android:textSize="16sp"
+            android:paddingTop="16dp"
             android:paddingBottom="10dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:textColor="@color/wallet_text_black"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="12dp"
+            app:layout_constraintLeft_toLeftOf="@id/address_name"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/address_name" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -114,9 +152,9 @@
     <TextView
         android:id="@+id/tv_next"
         style="@style/WalletCommonButton"
-        android:layout_marginBottom="14dp"
         android:text="@string/wallet_next"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="145dp"
+        app:layout_constraintTop_toBottomOf="@id/cl_address"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
