--- a/app/src/main/res/layout/wallet_fragment_import_wallet_from_private_key.xml
+++ b/app/src/main/res/layout/wallet_fragment_import_wallet_from_private_key.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".createmanager.walletimport.fragment.ImportWalletFromPrivateKeyFragment">
 
@@ -44,7 +45,7 @@
           android:id="@+id/loading_and_error"
           layout="@layout/wallet_common_loading_and_error"
           android:layout_width="match_parent"
-          android:layout_height="match_parent"
+          android:layout_height="0dp"
           android:visibility="gone"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
