--- a/app/src/main/res/layout/wallet_activity_send.xml
+++ b/app/src/main/res/layout/wallet_activity_send.xml
@@ -41,32 +41,21 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/edit_hint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/dp_16"
-            android:paddingBottom="@dimen/dp_16"
-            android:text="@string/wallet_input_amount"
-            android:textColor="@color/wallet_color_A2A2A2"
-            android:textSize="16sp"
-            app:layout_constraintLeft_toLeftOf="@id/name"
-            app:layout_constraintTop_toBottomOf="@id/name" />
-
         <EditText
             android:id="@+id/input_amount"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:paddingTop="@dimen/dp_16"
+            android:paddingBottom="@dimen/dp_16"
+            android:layout_height="wrap_content"
             android:layout_marginRight="7dp"
             android:background="@null"
+            android:hint="@string/wallet_input_amount"
             android:inputType="number|numberDecimal"
-            android:paddingLeft="18dp"
             android:textColor="@color/wallet_text_black"
             android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@id/edit_hint"
-            app:layout_constraintLeft_toRightOf="@id/edit_hint"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/edit_hint" />
+            app:layout_constraintLeft_toLeftOf="@id/name"
+            app:layout_constraintTop_toBottomOf="@id/name"
+            app:layout_constraintRight_toRightOf="parent" />
 
         <View
             android:id="@+id/line"
@@ -74,7 +63,7 @@
             android:layout_height="1dp"
             android:layout_marginRight="7dp"
             android:background="@color/wallet_line_gray"
-            app:layout_constraintLeft_toLeftOf="@id/edit_hint"
+            app:layout_constraintLeft_toLeftOf="@id/input_amount"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/input_amount" />
 
