--- a/app/src/main/res/layout/wallet_main_top_title_view.xml
+++ b/app/src/main/res/layout/wallet_main_top_title_view.xml
@@ -1,42 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.idhub.wallet.main.MainTopTitleView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_top_title_bg"
+    android:layout_width="match_parent"
     android:layout_height="74dp"
     android:background="@mipmap/wallet_main_top_title_bg"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/main_left_menu"
-        android:src="@mipmap/wallet_main_menu"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_16"
-      android:layout_marginBottom="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_10"
+        android:src="@mipmap/wallet_main_menu"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_height="wrap_content" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/title"
-        android:text="DEX"
-        android:visibility="gone"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="@dimen/dp_10"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
-        android:textSize="@dimen/font_sp_17"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dp_10"
+        android:text="DEX"
         android:textColor="@color/wallet_white"
-        android:layout_height="wrap_content" />
+        android:textSize="@dimen/font_sp_17"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/main_scan"
-        android:layout_marginRight="@dimen/dp_16"
-        android:src="@mipmap/wallet_main_scan_icon"
         android:layout_width="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/dp_16"
         android:layout_marginBottom="@dimen/dp_10"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_height="wrap_content" />
+        android:src="@mipmap/wallet_main_scan_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 </com.idhub.wallet.main.MainTopTitleView>
