--- a/app/src/main/res/layout/wallet_st_main_view.xml
+++ b/app/src/main/res/layout/wallet_st_main_view.xml
@@ -38,6 +38,7 @@
             android:layout_marginBottom="@dimen/dp_12"
             android:text="-0.65%"
             android:textColor="@color/wallet_white"
+            android:visibility="gone"
             android:textSize="@dimen/font_sp_14"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
@@ -85,6 +86,7 @@
             android:layout_marginBottom="@dimen/dp_7"
             android:text="+0.65%"
             android:textColor="@color/wallet_white"
+            android:visibility="gone"
             android:textSize="@dimen/font_sp_14"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
@@ -122,6 +124,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_12"
             android:layout_marginBottom="@dimen/dp_7"
+            android:visibility="gone"
             android:text="+0.65%"
             android:textColor="@color/wallet_white"
             android:textSize="@dimen/font_sp_14"
@@ -159,6 +162,7 @@
         <TextView
             android:id="@+id/fourth_value"
             android:layout_width="wrap_content"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_8"
             android:layout_marginBottom="@dimen/dp_12"
@@ -213,6 +217,7 @@
             android:text="-10.09%"
             android:textColor="@color/wallet_white"
             android:textSize="@dimen/font_sp_12"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -257,6 +262,7 @@
             android:layout_marginLeft="@dimen/dp_4"
             android:layout_marginBottom="@dimen/dp_8"
             android:text="-10.09%"
+            android:visibility="gone"
             android:textColor="@color/wallet_white"
             android:textSize="@dimen/font_sp_12"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -296,6 +302,7 @@
             android:layout_marginTop="@dimen/dp_20"
             android:layout_marginRight="@dimen/dp_8"
             android:text="+8.53%"
+            android:visibility="gone"
             android:textColor="@color/wallet_white"
             android:textSize="@dimen/font_sp_12"
             app:layout_constraintRight_toRightOf="parent"
@@ -310,6 +317,5 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </com.idhub.wallet.assets.view.STMainView>
