--- a/app/src/main/res/values/wallet_colors.xml
+++ b/app/src/main/res/values/wallet_colors.xml
@@ -70,4 +70,5 @@
     <color name="wallet_color_D9D9D9">#D9D9D9</color>
     <color name="wallet_color_202020">#202020</color>
     <color name="wallet_color_ee000000">#aa000000</color>
+    <color name="wallet_color_00000000">#00000000</color>
 </resources>
